# mcapp

./: README.md  howtorun.md  index.html  main.js  package.json  plan.md  styles.css  tsconfig.json
src/: App.tsx  components.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/hooks/: api.ts
src/pages/: AccountsPage.tsx  DiscoverPage.tsx  HomePage.tsx  InstanceDetailPage.tsx  LibraryPage.tsx  ProjectDetailPage.tsx  SettingsPage.tsx
